# pytube-TKGUI

./: .dockerignore  .gitignore  docker-compose.yml  main.py  main.spec  pyproject.toml
.circleci/: config.yml
pytube_builders/ubuntu/: Dockerfile
pytube_builders/windows/: Dockerfile
pytube_tkgui/: __init__.py  app.py  functions.py  main.py  main.spec  utils.py
