[tool.poetry]
name = "pytube-TKGUI"
version = "0.1.0"
description = ""
authors = ["hallowslab <hallow.tech.lab@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pytube = "^12.0.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.10"
pytest = "^5.2"
black = "^22.1.0"
taskipy = "^1.10.1"

[tool.taskipy.tasks]
test = "python -m unittest tests/test_*.py"
format = "Black ."
build = "pyinstaller main.spec"
start = "python main.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
